--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-smartshop---quản-lý-kho-thông-minh",
+  "name": "copy-of-copy-of-copy-of-smartshop---quản-lý-kho-thông-minh",
   "private": true,
   "version": "0.0.0",
   "type": "module",
